# VespaG

./: README.md  pyproject.toml
vespag/: __init__.py
vespag/predict/: predict.py
vespag/utils/: __init__.py  mutations.py  type_hinting.py  utils.py
vespag/utils/data/score_transformation/: vespag_scores_prott5.csv
