[project]
name = "vespag"
version = "0.1.0"
description = "Accurate and blazingly fast protein fitness prediction using protein language models"
authors = [
    {name = "Julius Schlensok", email = "julius@schlensok.org"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "scikit-learn>=1.6.1",
    "jaxtyping>=0.3.2",
]

[project.scripts]
vespag = "vespag.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["vespag", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["vespag"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:"
]

[tool.ruff]
include = [
    "*.py",
    "pyproject.toml",
    "README.md",
]

line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["C4", "I", "UP", "YTT", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
